--- a/CSS/recstyle.css
+++ b/CSS/recstyle.css
@@ -45,3 +45,89 @@ body {
     color:#912f56;
 
 }
+
+.main-logo-grid {
+
+    
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    margin: 25px;
+    float: left;
+}
+
+.rotating-outer-container {
+    width: 100px;
+    height: 100px;
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+
+}
+
+.rotating-outer-container svg {
+     animation: rotate 50s linear 0s infinite; 
+}
+
+@keyframes rotate {
+    0% {transform: rotate(0deg);} 
+    25% {transform: rotate(90deg);}
+    50% {transform: rotate(180deg);}
+     75% {transform: rotate(270deg);}
+	100% {transform: rotate(360deg);}
+}
+
+.logo-container {
+    
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.make-middle {
+    width: 100px;
+    
+
+}
+.make-middle svg {
+    padding-top: 10px;
+}
+
+  
+  .nav {
+    width: 100%;
+  }
+  
+  .navbar {
+    list-style: none;
+    overflow: hidden;
+    color: white;
+    padding: 0;
+    text-align: right;
+    margin: 16px 36px;
+    float: right;
+    display: fixed;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
+  a:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  
+  a:visited {
+    color: white;
+    text-decoration: none;
+  }
