--- a/CSS/recstyle.css
+++ b/CSS/recstyle.css
@@ -3,7 +3,7 @@ body {
 }
 
 .title{
-    font-family: 'Quantico', sans-serif;
+    font-family: "Apfel Grotezk";
     font-weight: 100;
     font-size: 3vw;
     color:white;
@@ -14,7 +14,7 @@ body {
 .link1{
     position: relative;
     float: right;
-    font-family: 'Quantico', sans-serif;
+    font-family: "Apfel Grotezk";
     font-weight: 100;
     font-size: 1.5vw;
     color:#912f56;
@@ -29,7 +29,7 @@ body {
 .link2{
     position: relative;
     float: right;
-    font-family: 'Quantico', sans-serif;
+    font-family: "Apfel Grotezk";
     font-weight: 100;
     font-size: 1.5vw;
     color:white;
@@ -46,82 +46,32 @@ body {
 
 }
 
-.main-logo-grid {
 
-    
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    margin: 25px;
-    float: left;
-}
 
-.rotating-outer-container {
-    width: 100px;
-    height: 100px;
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 1;
-
-}
-
-.rotating-outer-container svg {
-     animation: rotate 50s linear 0s infinite; 
-}
-
-@keyframes rotate {
-    0% {transform: rotate(0deg);} 
-    25% {transform: rotate(90deg);}
-    50% {transform: rotate(180deg);}
-     75% {transform: rotate(270deg);}
-	100% {transform: rotate(360deg);}
-}
-
-.logo-container {
-    
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.make-middle {
-    width: 100px;
-    
-
-}
-.make-middle svg {
-    padding-top: 10px;
-}
-
-  
-  .nav {
-    width: 100%;
-  }
-  
-  .navbar {
-    list-style: none;
-    overflow: hidden;
-    color: white;
-    padding: 0;
+#top-right {
+    position: absolute;
+    width: 95%;
     text-align: right;
-    margin: 16px 36px;
-    float: right;
-    display: fixed;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
+    align-items: right;
+    justify-content: right;
+    font-family: "Apfel Grotezk";
+    padding:0px;
+    margin: 40px;
+    font-size: 1em;
+    display: inline-block;
+    
+  }
 
+  #top div {
+    position: fixed;
+    display: inline-block;
   }
 
   a {
     color: white;
     text-decoration: none;
   }
+  
   a:hover {
     color: white;
     text-decoration: underline;
@@ -131,3 +81,4 @@ body {
     color: white;
     text-decoration: none;
   }
+  
